# MLOPS-Project

./: README.md  pyproject.toml
Jolynn/: app.py
Kynan/: app.py  requirements.txt
Kynan/notebook/: MLOP 220149D assignment.ipynb
Michelle/: mushroom.py
Michelle/model/: label_encoders.pkl
Michelle/notebook/: IT3385_IndivNotebook_221547F_Michelle.ipynb  mushroom_edibility_classification.pkl  mushroom_pipeline.pkl
Michelle/notebook/mlruns/0/: meta.yaml
Michelle/notebook/mlruns/847736971069210766/: meta.yaml
Michelle/notebook/mlruns/847736971069210766/00a8776cf56c4960b44f89a0c1f4fca5/: meta.yaml
Michelle/notebook/mlruns/847736971069210766/015c5a460e2244c19f47e2d34b7da39f/: meta.yaml
Michelle/notebook/mlruns/847736971069210766/028eb201484c40a2a73f6bcb090ebc5f/: meta.yaml
Michelle/notebook/mlruns/847736971069210766/03b7b8d971504f158e830dff9fa4c11e/: meta.yaml
Michelle/notebook/mlruns/847736971069210766/0613cbf281b94dd4a2d2e01772d95618/: meta.yaml
Michelle/notebook/mlruns/847736971069210766/070e6a5c9b604f859298a08a1b433194/: meta.yaml
Michelle/notebook/mlruns/847736971069210766/0710ee54caa141829e8a973a96a4db4e/: meta.yaml
Michelle/notebook/mlruns/847736971069210766/07310a61d1bd40e5b8dcc9ce9d4f5c03/: meta.yaml
Michelle/notebook/mlruns/847736971069210766/0820878d49d4497b81aa86851c556c1b/: meta.yaml
Michelle/notebook/mlruns/847736971069210766/08dc500d3e104fe8bcf44406f39d8d41/: meta.yaml
Michelle/static/: style.css
Michelle/templates/: index.html  result.html
(+1937 files in other folders)
