[tool.poetry]
name = "mlops-project"
version = "0.1.0"
description = ""
authors = ["Jo-lynn <tayjolynn26@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
numpy = "^2.1.0"
pandas = "^2.2.2"
requests = "^2.32.3"
jsonify = "^0.5"
datetime = "^5.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
